# something

./: .env  Cargo.toml  Rocket.toml  TODO.md  docker-compose.yml
.github/workflows/: CI.yml  backend.yml  frontend.yml
appstream/: Cargo.toml
appstream/src/: app_id.rs  collection.rs  component.rs  content_rating.rs  enums.rs  lib.rs  license.rs  release.rs  screenshot.rs  translatable_string.rs
flathub/: Cargo.toml
flathub/ostree/: test.rs
flathub/src/: main.rs
flathub/src/types/: repository.rs
frontend/: index.html  package.json
frontend/src/: App.jsx  App.scss
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/pages/: Application.jsx  Home.jsx
migrations/: V1__add_components_table.sql
src/: main.rs  routes.rs  store.rs
src/appstream/: app_id.rs  bundle.rs  category.rs  collection.rs  component.rs  content_rating.rs  de.rs  enums.rs  icon.rs  language.rs  manifest.rs  mod.rs  project_license.rs  release.rs  screenshot.rs
src/appstream/tests/: desktop.xml
src/ostree/: test.rs
src/types/: component.rs  markup_string.rs  mod.rs  repository.rs  translatable_string.rs
