[package]
name = "flathub"
version = "0.1.0"
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5"}
rocket_contrib = { version = "0.4.5", features=["mongodb_pool"]}
rocket_cors = "0.5"
url = { version = "2.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gio = "0.8"
glib = "0.9"
ostree = { version = "0.7", features = ["v2018_7"] }
zvariant = "2.0"
zvariant_derive = "2.0"
byteorder = "1.3"
mongodb = { version = "1.0", features = ["sync"], default-features = false }
bson = "1.0"
appstream = { git = "https://github.com/bilelmoussaoui/appstream.git", features = ["gzip"] }